Se implementan todos los filtros restantes

--- a/src/app/components/image-detail/image-detail.component.html
+++ b/src/app/components/image-detail/image-detail.component.html
@@ -36,12 +36,12 @@
                                             <p class="card-text"> <span class="label-bold">Colección: </span>
                                                 {{photo.quarter}} </p>
                                             <p class="card-text"> <span class="label-bold">Categoría:
-                                                </span>{{photo.gender}}</p>
+                                                </span>{{photo.categoria}}</p>
                                             <p class="card-text"> <span class="label-bold">Subcategoría: </span>
-                                                {{photo.x}}
+                                                {{photo.subCategoria}}
                                             </p>
                                             <p class="card-text"> <span class="label-bold">Tipo de prenda: </span>
-                                                {{photo.categoria}}
+                                                {{photo.tipoPrenda}}
                                             </p>
                                             <p class="card-text"> <span class="label-bold">Nombre: </span>
                                                 {{photo.imageName}}
@@ -67,9 +67,6 @@
                                             </p>
                                             <p class="card-text"> <span class="label-bold">Estado: </span>
                                                 {{photo.tag}}
-                                            </p>
-                                            <p class="card-text"> <span class="label-bold">Uso: </span>
-                                                {{photo.use}}
                                             </p>
                                         </li>
                                     </ul>
