--- a/src/app/components/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informe-categoria/informe-categoria.component.html
@@ -46,7 +46,7 @@
             </a>
             <ul class="collapse list-unstyled firstitem itemlist" id="colectionSubmenu">
               <li class="list-items-container">
-                <a routerLink="/informeCategoria" class="sel2">X</a>
+                <a routerLink="/informeCategoria" class="sel2">Prendas</a>
               </li>
             </ul>
           </li>
