--- a/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
+++ b/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
@@ -2,17 +2,283 @@
   <!-- chart -->
   <div class="chart-container">
     <div class="titulo-chart">
-      <h2>Novedades comparacion marcas</h2>
+      <div class="filtersCharts mb-2">
+        <h2>Novedades comparacion marcas</h2>
+
+        <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
+          xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
+          viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
+          aria-label="Illustration of a Funnel" class="filterSvgCharts ml-3">
+          <g id="__id33_ssutzzo1g">
+            <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
+              style="fill: inherit"></path>
+          </g>
+        </svg>
+        <br>
+        <ng-template #template>
+          <div class="modal-header">
+            <h4 class="modal-title pull-left">Filtros</h4>
+            <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <ul class="list-unstyled components">
+
+              <li class="active">
+                <a href="#filterMArk" data-toggle="collapse" aria-expanded="false"
+                  class="dropdown-toggle menu-color">Marca
+                </a>
+                <ul class="collapse list-unstyled" id="filterMArk">
+
+                  <li *ngFor="let origin of originData">
+                    <label class="control control--checkbox">
+                      <input class="marca check" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
+                        (change)="validateCheckFilter($event.target.checked, origin, $event.target.className, $event.target)"
+                        id="{{origin.value}}" />
+                      {{origin.text}}
+                    </label>
+                  </li>
+                </ul>
+              </li>
+
+              <li class="active mt-2">
+                <a href="#filterCategory" data-toggle="collapse" aria-expanded="false"
+                  class="dropdown-toggle menu-color">Categoria
+                </a>
+                <ul class="collapse list-unstyled" id="filterCategory">
+                  <li *ngFor="let category of categoryData">
+                    <label class="control control--checkbox">
+                      <input class="categoria check2" type="checkbox" value="{{category.value}}"
+                        name="{{category.value}}"
+                        (change)="validateCheckFilter($event.target.checked, category, $event.target.className, $event.target)"
+                        id="{{category.value}}" />
+                      {{category.text}}
+                    </label>
+                  </li>
+                </ul>
+              </li>
+
+              <li class="active mt-2">
+                <a href="#filterSubCategory" data-toggle="collapse" aria-expanded="false"
+                  class="dropdown-toggle menu-color">Sub categoría
+                </a>
+                <ul class="collapse list-unstyled" id="filterSubCategory">
+                  <li *ngFor="let subcategory of subCategoryData">
+                    <label class="control control--checkbox">
+
+                      <input class="subCategoria check3" type="checkbox" value="{{subcategory.value}}"
+                        name="{{subcategory.value}}"
+                        (change)="validateCheckFilter($event.target.checked, subcategory, $event.target.className, $event.target)"
+                        id="{{subcategory.value}}" />
+                      {{subcategory.text}}
+                    </label>
+                  </li>
+                </ul>
+              </li>
+
+              <li class="active mt-2">
+                <a href="#filterTipoPrenda" data-toggle="collapse" aria-expanded="false"
+                  class="dropdown-toggle menu-color">Tipo de prenda
+                </a>
+                <ul class="collapse list-unstyled" id="filterTipoPrenda">
+                  <div class="overflow-auto container-scroll">
+                    <li *ngFor="let tipoprenda of tipoPrendaData">
+                      <label class="control control--checkbox">
+                        <input class="tipoPrenda check4" type="checkbox" value="{{tipoprenda.value}}"
+                          name="{{tipoprenda.value}}"
+                          (change)="validateCheckFilter($event.target.checked, tipoprenda, $event.target.className, $event.target)"
+                          id="{{tipoprenda.value}}" />
+                        {{tipoprenda.text}}
+                      </label>
+                    </li>
+                  </div>
+                </ul>
+              </li>
+
+              <li class="active mt-2">
+                <a href="#filterColor" data-toggle="collapse" aria-expanded="false"
+                  class="dropdown-toggle menu-color">Color
+                </a>
+                <ul class="collapse list-unstyled" id="filterColor">
+                  <div class="overflow-auto container-scroll">
+                    <li *ngFor="let color of colorData">
+                      <label class="control control--checkbox">
+                        <input class="color check5" type="checkbox" value="{{color.value}}" name="{{color.value}}"
+                          (change)="validateCheckFilter($event.target.checked, color, $event.target.className, $event.target)"
+                          id="{{color.value}}" />
+                        {{color.text}}
+                      </label>
+                    </li>
+                  </div>
+                </ul>
+              </li>
+
+              <li class="active mt-2">
+                <a href="#filterMaterials" data-toggle="collapse" aria-expanded="false"
+                  class="dropdown-toggle menu-color">Materiales
+                </a>
+                <ul class="collapse list-unstyled" id="filterMaterials">
+                  <div class="overflow-auto container-scroll">
+                    <li *ngFor="let e of materials">
+                      <label class="control control--checkbox">
+                        <input type="checkbox" class="ml-2" /></label>
+                      {{e.materiales}}
+                    </li>
+                  </div>
+                </ul>
+              </li>
+
+            </ul>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" (click)="modalRef.hide()">Cerrar</button>
+            <button type="button" class="btn btn-primary" (click)="applyFilter()">Aplicar filtros</button>
+          </div>
+        </ng-template>
+      </div>
     </div>
     <div class="chart-line">
-      <canvas id="myChart" width="200px" height="120px" ></canvas>
+      <canvas id="myChart" width="200px" height="120px"></canvas>
     </div>
   </div>
   <!-- fin chart -->
 
   <!-- tabla recien llegados -->
   <div class="table-container">
-    <h2>Categorías con mayor cambio - Recien llegados</h2>
+    <div class="filterTable">
+      <h2>Categorías con mayor cambio - Recien llegados</h2>
+      <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
+        xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
+        viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
+        aria-label="Illustration of a Funnel" class="filterSvgCharts ml-3">
+        <g id="__id33_ssutzzo1g">
+          <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
+            style="fill: inherit"></path>
+        </g>
+      </svg>
+      <br>
+      <ng-template #template>
+        <div class="modal-header">
+          <h4 class="modal-title pull-left">Filtros</h4>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <ul class="list-unstyled components">
+
+            <li class="active">
+              <a href="#filterMArk" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Marca
+              </a>
+              <ul class="collapse list-unstyled" id="filterMArk">
+
+                <li *ngFor="let origin of originData">
+                  <label class="control control--checkbox">
+                    <input class="marca check" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
+                      (change)="validateCheckFilter($event.target.checked, origin, $event.target.className, $event.target)"
+                      id="{{origin.value}}" />
+                    {{origin.text}}
+                  </label>
+                </li>
+              </ul>
+            </li>
+
+            <li class="active mt-2">
+              <a href="#filterCategory" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Categoria
+              </a>
+              <ul class="collapse list-unstyled" id="filterCategory">
+                <li *ngFor="let category of categoryData">
+                  <label class="control control--checkbox">
+                    <input class="categoria check2" type="checkbox" value="{{category.value}}" name="{{category.value}}"
+                      (change)="validateCheckFilter($event.target.checked, category, $event.target.className, $event.target)"
+                      id="{{category.value}}" />
+                    {{category.text}}
+                  </label>
+                </li>
+              </ul>
+            </li>
+
+            <li class="active mt-2">
+              <a href="#filterSubCategory" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Sub categoría
+              </a>
+              <ul class="collapse list-unstyled" id="filterSubCategory">
+                <li *ngFor="let subcategory of subCategoryData">
+                  <label class="control control--checkbox">
+
+                    <input class="subCategoria check3" type="checkbox" value="{{subcategory.value}}"
+                      name="{{subcategory.value}}"
+                      (change)="validateCheckFilter($event.target.checked, subcategory, $event.target.className, $event.target)"
+                      id="{{subcategory.value}}" />
+                    {{subcategory.text}}
+                  </label>
+                </li>
+              </ul>
+            </li>
+
+            <li class="active mt-2">
+              <a href="#filterTipoPrenda" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Tipo de prenda
+              </a>
+              <ul class="collapse list-unstyled" id="filterTipoPrenda">
+                <div class="overflow-auto container-scroll">
+                  <li *ngFor="let tipoprenda of tipoPrendaData">
+                    <label class="control control--checkbox">
+                      <input class="tipoPrenda check4" type="checkbox" value="{{tipoprenda.value}}"
+                        name="{{tipoprenda.value}}"
+                        (change)="validateCheckFilter($event.target.checked, tipoprenda, $event.target.className, $event.target)"
+                        id="{{tipoprenda.value}}" />
+                      {{tipoprenda.text}}
+                    </label>
+                  </li>
+                </div>
+              </ul>
+            </li>
+
+            <li class="active mt-2">
+              <a href="#filterColor" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Color
+              </a>
+              <ul class="collapse list-unstyled" id="filterColor">
+                <div class="overflow-auto container-scroll">
+                  <li *ngFor="let color of colorData">
+                    <label class="control control--checkbox">
+                      <input class="color check5" type="checkbox" value="{{color.value}}" name="{{color.value}}"
+                        (change)="validateCheckFilter($event.target.checked, color, $event.target.className, $event.target)"
+                        id="{{color.value}}" />
+                      {{color.text}}
+                    </label>
+                  </li>
+                </div>
+              </ul>
+            </li>
+
+            <li class="active mt-2">
+              <a href="#filterMaterials" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Materiales
+              </a>
+              <ul class="collapse list-unstyled" id="filterMaterials">
+                <div class="overflow-auto container-scroll">
+                  <li *ngFor="let e of materials">
+                    <label class="control control--checkbox">
+                      <input type="checkbox" class="ml-2" /></label>
+                    {{e.materiales}}
+                  </li>
+                </div>
+              </ul>
+            </li>
+
+          </ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" (click)="modalRef.hide()">Cerrar</button>
+          <button type="button" class="btn btn-primary" (click)="applyFilter()">Aplicar filtros</button>
+        </div>
+      </ng-template>
+    </div>
     <p>Comparación mes a mes</p>
 
     <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-hover table-sm">
@@ -28,8 +294,8 @@
       <tbody>
         <tr *ngFor="let e of photos">
           <td data-label="Categoría"> {{e.categoria}} </td>
-          <td data-label="Subcategoría"> {{e.x}} </td>
-          <td data-label="Tipo de prenda"> {{e.imageName}} </td>
+          <td data-label="Subcategoría"> {{e.subCategoria}} </td>
+          <td data-label="Tipo de prenda"> {{e.tipoPrenda}} </td>
           <td data-label="Los recién llegados"> {{e.x}} </td>
           <td data-label="Diferencia"> {{e.x}} </td>
         </tr>
