--- a/src/app/components/informes/informes.component.css
+++ b/src/app/components/informes/informes.component.css
@@ -40,8 +40,7 @@
   font-size: 16px !important;
 }
 
-.menu-color,
-.prendaGen {
+.menu-color {
   color: #212121;
   font-weight: bold;
 }
@@ -90,6 +89,10 @@
 
 .itemlist {
   margin-left: 30px;
+}
+
+.container-scroll {
+  height: 250px;
 }
 
 #page-content-wrapper {
