--- a/src/app/components/informes/informe-descuento/informe-descuento.component.css
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.css
@@ -1,3 +1,27 @@
+.container-scroll {
+  height: 250px;
+}
+
+.filtersCharts {
+  display: flex;
+  width: 100%;
+}
+
+.filterTable {
+  display: flex;
+  width: auto;
+}
+
+.filterSvgCharts, .filterSvgTable {
+  margin-left: 20px;
+  margin-top: -10px;
+}
+
+.menu-color {
+  color: #212121;
+  font-weight: bold;
+}
+
 /* Tablas */
 .table-container {
     width: 100%;
