--- a/src/app/components/informes/informe-sku/informe-sku.component.css
+++ b/src/app/components/informes/informe-sku/informe-sku.component.css
@@ -1,7 +1,25 @@
-.redtri {
-  width: 25px;
-  height: 18px;
-  margin-left: 8px;
+.container-scroll {
+  height: 250px;
+}
+
+.filtersCharts {
+  display: flex;
+  width: 100%;
+}
+
+.filterTable {
+  display: flex;
+  width: auto;
+}
+
+.filterSvgCharts, .filterSvgTable {
+  margin-left: 20px;
+  margin-top: -10px;
+}
+
+.menu-color {
+  color: #212121;
+  font-weight: bold;
 }
 
 /* Tablas */
